--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,36 @@
 spring.application.name=auto-todo-tracker
 
-# --- H2 DB?? ---
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-# --- Hibernate???????? ---
+#MySQL????
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Tokyo
+spring.datasource.username=todo_user
+spring.datasource.password=boardpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA???
 spring.jpa.hibernate.ddl-auto=update
-
-# --- H2???????????????????? ---
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# ?????????????
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+
+
+
+##H2 DB Setting
+## --- H2 DB?? ---
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+## --- Hibernate???????? ---
+#spring.jpa.hibernate.ddl-auto=update
+#
+## --- H2???????????????????? ---
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+## ?????????????
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
+
