fix/CookieのSameSite属性をNoneに設定(バックエンド)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,30 +1,30 @@
 spring.application.name=auto-todo-tracker
 
-#-----???-------------------------------------------------------------------
-#MySQL????
-spring.datasource.url=jdbc:mysql://root:JAWZchhIhphbdWDJTPNKphABcUFYcPTQ@crossover.proxy.rlwy.net:49348/railway
-spring.datasource.username=root
-spring.datasource.password=JAWZchhIhphbdWDJTPNKphABcUFYcPTQ
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA???
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-#-----------------------------------------------------------------------------
-
-#-----???-------------------------------------------------------------------
-#MySQL????
-#spring.datasource.url=jdbc:mysql://localhost:3306/todo_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Tokyo
-#spring.datasource.username=todo_user
-#spring.datasource.password=boardpass
+##---public---------------------------------------------------------------------
+##MySQL
+#spring.datasource.url=jdbc:mysql://root:JAWZchhIhphbdWDJTPNKphABcUFYcPTQ@crossover.proxy.rlwy.net:49348/railway
+#spring.datasource.username=root
+#spring.datasource.password=JAWZchhIhphbdWDJTPNKphABcUFYcPTQ
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA???
+#
+## JPA
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 ##-----------------------------------------------------------------------------
+
+---develop-------------------------------------------------------------------
+ MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Tokyo
+spring.datasource.username=todo_user
+spring.datasource.password=boardpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+ JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#-----------------------------------------------------------------------------
 
 ##H2 DB Setting
 ## --- H2 DB?? ---
