--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,14 +17,14 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=${PORT:8080}
 #-----------------------------------------------------------------------------
 
-#---develop-------------------------------------------------------------------
-# MySQL
+##---develop-------------------------------------------------------------------
+##MySQL
 #spring.datasource.url=jdbc:mysql://localhost:3306/todo_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Tokyo
 #spring.datasource.username=todo_user
 #spring.datasource.password=boardpass
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #
-# JPA
+##JPA
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
